nav link name updated

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         <!-- nav -->
         <nav class="nav">
             <ul class="nav_links">
-                <li><a href="#" class="nav_single_link"><img src="./images/coffee logo.png" alt=""></a></li>
+               <li><a href="#" class="nav_single_link"><img src="./images/coffee logo.png" alt=""></a></li>
                 <li><a href="#header" class="nav_single_link">home</a></li>
-                <li><a href="#about" class="nav_single_link">work</a></li>
+                <li><a href="#about" class="nav_single_link">About</a></li>
                 <li><a href="#drink" class="nav_single_link">Free drink</a></li>
                 <li><a href="#work" class="nav_single_link">work</a></li>
                 <li><a href="#contact" class="nav_single_link">contact</a></li>
