--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
                  <div class="section-title">
                      <h1 class="section-title_name bell-fonts">Our story</h1>
                      <div class="section-title_underline"></div>
-                     <p class="section-title_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iure aliquam ipsa tempore fugit dolores illo sunt vel blanditiis impedit.
-                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, porro?
+                     <p class="section-title_text">We offer a delicious variety of coffee roasted in house made by our professionally trained baristas. We have everything from classic coffee to our house made specialty beverages.   All of our sauces & syrups are made in-house with all natural ingredients ensuring you the highest quality in taste & health.You can complete your coffee with one of our delicious sweet treats made by our very own baker.
                      </p>
                  </div>
                  <!-- second child -->
@@ -100,8 +99,7 @@
                  <div class="section-title">
                      <h1 class="section-title_name bell-fonts">What we do</h1>
                      <div class="section-title_underline"></div>
-                     <p class="section-title_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iure aliquam ipsa tempore fugit dolores illo sunt vel blanditiis impedit.
-                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, porro?
+                     <p class="section-title_text">We offer a unique coffee house environment unlike any other coffee shop. We are not only a place to drop in and get your morning cup of coffee (although you are more than welcome to do that), we are a place where you can sit down and enjoy that tailor-made cup of coffee. If you need to work, we have a seating area created specifically for you. If you need to rest, we have a soft-seating area in front of a stone fire place that is perfect for your weary mind and body. 
                      </p>
                  </div>
                  <!-- second child -->
